Fix spacing

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ a {
 .hero-container {
   color: white;
   padding: 0px 30px; 
+  gap: 30px;
   background-color: #1F2937;
   display: flex;
   border: 2px solid red;
@@ -116,7 +117,11 @@ h2 {
   font-size: 36px;
   color: #1F2937;
   background-color: #E5E7EB;
-  text-align: center;
+  padding-top: 30px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .quote p {
@@ -124,8 +129,7 @@ h2 {
   text-align: right;
   padding-right: 40px;
   padding-bottom: 40px;
-  
-  
+  width: 100%;
 }
 
 .action-container {
@@ -164,6 +168,4 @@ h3 {
   border-radius: 5px;
   height: 30px;
   width: 100px;
-  
-  
 }
